--- a/smart_advertisement_capstone.ipynb
+++ b/smart_advertisement_capstone.ipynb
@@ -1490,7 +1490,16 @@
    "metadata": {
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "21/12/07 06:52:45 WARN HeartbeatReceiver: Removing executor driver with no recent heartbeats: 949393 ms exceeds timeout 120000 ms\n",
+      "21/12/07 06:52:46 WARN SparkContext: Killing executors is not supported by current scheduler.\n"
+     ]
+    }
+   ],
    "source": [
     "# Perform quality checks here"
    ]
