test:Test writing of parquet file

--- a/test.ipynb
+++ b/test.ipynb
@@ -25,6 +25,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "21/12/07 16:42:36 WARN Utils: Your hostname, Yugeshs-MacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 192.168.0.13 instead (on interface en0)\n",
+      "21/12/07 16:42:36 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -38,7 +46,7 @@
       "Ivy Default Cache set to: /Users/yugesh/.ivy2/cache\n",
       "The jars for the packages stored in: /Users/yugesh/.ivy2/jars\n",
       "org.apache.hadoop#hadoop-aws added as a dependency\n",
-      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-0b9cafc7-4cb3-469b-8bb5-fd886b33c8fa;1.0\n",
+      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-0b204692-fda0-4408-9c86-4fa0bd42efcd;1.0\n",
       "\tconfs: [default]\n",
       "\tfound org.apache.hadoop#hadoop-aws;2.7.0 in central\n",
       "\tfound org.apache.hadoop#hadoop-common;2.7.0 in central\n",
@@ -109,7 +117,7 @@
       "\tfound com.amazonaws#aws-java-sdk;1.7.4 in central\n",
       "\tfound joda-time#joda-time;2.10.13 in central\n",
       "\t[2.10.13] joda-time#joda-time;[2.2,)\n",
-      ":: resolution report :: resolve 6412ms :: artifacts dl 65ms\n",
+      ":: resolution report :: resolve 6113ms :: artifacts dl 134ms\n",
       "\t:: modules in use:\n",
       "\tasm#asm;3.2 from central in [default]\n",
       "\tcom.amazonaws#aws-java-sdk;1.7.4 from central in [default]\n",
@@ -185,15 +193,15 @@
       "\t---------------------------------------------------------------------\n",
       "\t|      default     |   68  |   1   |   0   |   0   ||   68  |   0   |\n",
       "\t---------------------------------------------------------------------\n",
-      ":: retrieving :: org.apache.spark#spark-submit-parent-0b9cafc7-4cb3-469b-8bb5-fd886b33c8fa\n",
+      ":: retrieving :: org.apache.spark#spark-submit-parent-0b204692-fda0-4408-9c86-4fa0bd42efcd\n",
       "\tconfs: [default]\n",
-      "\t0 artifacts copied, 68 already retrieved (0kB/99ms)\n",
-      "21/12/07 12:58:52 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "\t0 artifacts copied, 68 already retrieved (0kB/80ms)\n",
+      "21/12/07 16:42:43 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "21/12/07 12:58:54 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
-      "21/12/07 12:58:54 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n"
+      "21/12/07 16:42:45 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
+      "21/12/07 16:42:45 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n"
      ]
     }
    ],
@@ -204,22 +212,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Immigration data etl"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_spark_session():\n",
-    "    \"\"\"Returns spark session object\n",
-    "    Returns:\n",
-    "        [Object]: pyspark.sql.session.SparkSession object\n",
-    "    \"\"\"\n",
-    "    spark = SparkSession.builder.config(\n",
-    "        \"spark.jars.packages\", \"org.apache.hadoop:hadoop-aws:2.7.0\"\n",
-    "    ).getOrCreate()\n",
-    "    return spark\n",
-    "\n",
-    "\n",
     "def process_immigration_data(spark, input_data, output_data):\n",
     "    \"\"\"[summary]\n",
     "\n",
@@ -374,26 +378,64 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'immigration_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/nj/mjmn4qs117x01z2h6p4xv76r0000gn/T/ipykernel_84249/3974805286.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mimmigration_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprintSchema\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'immigration_df' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "21/12/07 16:42:58 WARN package: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+-----------+-------------+-------------+-----------------+------------+--------------+-------------------+---+------+-----------+----------+-------+\n",
+      "|cicid|origin_city|traveled_from| arrived_city|       us_address|arrival_date|departure_date|transportation_mode|age|gender|visa_status|occupation|airline|\n",
+      "+-----+-----------+-------------+-------------+-----------------+------------+--------------+-------------------+---+------+-----------+----------+-------+\n",
+      "|    0|    AUSTRIA|      AUSTRIA|      CHICAGO|         MISSOURI|  2016-04-01|    2016-04-15|                Air| 59|     M|   Pleasure|      null|     AA|\n",
+      "|    1|    AUSTRIA|      AUSTRIA|      TORONTO|             null|  2016-04-01|    2016-04-03|                Air| 48|     M|   Business|      null|     AA|\n",
+      "|    2|    AUSTRIA|    AUSTRALIA|  LOS ANGELES|       CALIFORNIA|  2016-04-01|    2016-04-23|                Air| 39|     M|   Pleasure|      null|     AA|\n",
+      "|    3|    BELGIUM|      BELGIUM|WASHINGTON DC|DIST. OF COLUMBIA|  2016-04-01|    2016-04-07|                Air|  4|     M|   Pleasure|      null|     UA|\n",
+      "|    4|    BELGIUM|      BELGIUM|     NEW YORK|         NEW YORK|  2016-04-01|    2016-04-05|                Air| 55|     F|   Pleasure|      null|     SN|\n",
+      "+-----+-----------+-------------+-------------+-----------------+------------+--------------+-------------------+---+------+-----------+----------+-------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
     }
    ],
    "source": [
-    "immigration_df.printSchema()"
+    "df.show(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "21/12/07 16:43:57 WARN MemoryManager: Total allocation exceeds 95.00% (906,992,014 bytes) of heap memory\n",
+      "Scaling row group sizes to 96.54% for 7 writers\n",
+      "21/12/07 16:43:57 WARN MemoryManager: Total allocation exceeds 95.00% (906,992,014 bytes) of heap memory\n",
+      "Scaling row group sizes to 84.47% for 8 writers\n",
+      "21/12/07 16:44:16 WARN MemoryManager: Total allocation exceeds 95.00% (906,992,014 bytes) of heap memory\n",
+      "Scaling row group sizes to 96.54% for 7 writers\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.write.mode(\"overwrite\").parquet(\"./data/processed_data\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
