refactor: Format notebook file

--- a/smart_advertisement_capstone.ipynb
+++ b/smart_advertisement_capstone.ipynb
@@ -41,26 +41,21 @@
     "### Step 1: Scope the Project and Gather Data\n",
     "\n",
     "#### Scope\n",
-    "In this project I will be create a cloud data warehouse that will support answering question through analytics tables and dashboards. Later, the warehouse could be used as a backend for developing automatic advertisement services. \n",
+    "In this project I will create a cloud data warehouse that will support answering question through analytics tables and dashboards. Later, the warehouse could be used as a backend for developing automatic advertisement services.\n",
     "\n",
     "The following steps will be carried out:\n",
-    "\n",
-    "The data I\n",
-    "Explain what you plan to do in the project in more detail. What data do you use? What is your end solution look like? What tools did you use? etc.\n",
+    "- Transform the data and store in s3 in parquet format\n",
+    "- Load the data to redshift for analytics\n",
+    "- Use airflow to monitor pipeline\n",
+    "- Use SQL client tool to the redshift database for analytics\n",
+    "- Later, api will be developed using lambda function and API gateway for dashboard and automatic advertisement\n",
     "\n",
     "#### The data\n",
     "\n",
-    "The project uses data from two data sources\n",
+    "The project uses data three data sources\n",
     "- I94 immigration data that comes from the US National Tourism and Trade Office.\n",
     "- U.S City demographic data that comes from Opensoft.\n",
-    "- World temperature data from Kaggle\n",
-    "\n",
-    "\n",
-    "### Architecture\n",
-    "\n",
-    "#### Describe and Gather Data \n",
-    "Describe the data sets you're using. Where did it come from? What type of information is included? \n",
-    "\n"
+    "- Airports data from Kaggle\n"
    ]
   },
   {
@@ -71,7 +66,6 @@
    },
    "outputs": [],
    "source": [
-    "# Do all imports and installs here\n",
     "import pandas as pd\n",
     "import os\n",
     "from pyspark.sql import SparkSession\n",
@@ -92,8 +86,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "21/12/06 23:58:25 WARN Utils: Your hostname, Yugeshs-MacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 192.168.0.18 instead (on interface en0)\n",
-      "21/12/06 23:58:25 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+      "21/12/08 01:23:06 WARN Utils: Your hostname, Yugeshs-MacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 192.168.0.18 instead (on interface en0)\n",
+      "21/12/08 01:23:06 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
      ]
     },
     {
@@ -110,7 +104,7 @@
       "Ivy Default Cache set to: /Users/yugesh/.ivy2/cache\n",
       "The jars for the packages stored in: /Users/yugesh/.ivy2/jars\n",
       "org.apache.hadoop#hadoop-aws added as a dependency\n",
-      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-c751fae0-abd2-4fdb-8e23-61ec9f05128b;1.0\n",
+      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-5e90d866-2492-43be-b2cf-dede2821d5a4;1.0\n",
       "\tconfs: [default]\n",
       "\tfound org.apache.hadoop#hadoop-aws;2.7.0 in central\n",
       "\tfound org.apache.hadoop#hadoop-common;2.7.0 in central\n",
@@ -181,7 +175,7 @@
       "\tfound com.amazonaws#aws-java-sdk;1.7.4 in central\n",
       "\tfound joda-time#joda-time;2.10.13 in central\n",
       "\t[2.10.13] joda-time#joda-time;[2.2,)\n",
-      ":: resolution report :: resolve 6179ms :: artifacts dl 132ms\n",
+      ":: resolution report :: resolve 7875ms :: artifacts dl 201ms\n",
       "\t:: modules in use:\n",
       "\tasm#asm;3.2 from central in [default]\n",
       "\tcom.amazonaws#aws-java-sdk;1.7.4 from central in [default]\n",
@@ -257,10 +251,10 @@
       "\t---------------------------------------------------------------------\n",
       "\t|      default     |   68  |   1   |   0   |   0   ||   68  |   0   |\n",
       "\t---------------------------------------------------------------------\n",
-      ":: retrieving :: org.apache.spark#spark-submit-parent-c751fae0-abd2-4fdb-8e23-61ec9f05128b\n",
+      ":: retrieving :: org.apache.spark#spark-submit-parent-5e90d866-2492-43be-b2cf-dede2821d5a4\n",
       "\tconfs: [default]\n",
-      "\t0 artifacts copied, 68 already retrieved (0kB/77ms)\n",
-      "21/12/06 23:58:32 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "\t0 artifacts copied, 68 already retrieved (0kB/69ms)\n",
+      "21/12/08 01:23:15 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
@@ -402,6 +396,11 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -469,7 +468,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "21/12/06 23:58:51 WARN package: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n"
+      "21/12/08 01:23:36 WARN package: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n"
      ]
     },
     {
@@ -542,7 +541,7 @@
    "outputs": [],
    "source": [
     "def assign_value(col_name, key):\n",
-    "    ROOT = \"./lookup/\"\n",
+    "    ROOT = \"./data/lookup/\"\n",
     "    key = str(key)\n",
     "    col_name = col_name.lower()\n",
     "\n",
@@ -612,6 +611,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exclude unused columns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -666,6 +672,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Rename columns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -673,6 +686,13 @@
    "source": [
     "# Rename columns\n",
     "immigration_df = immigration_df.withColumnRenamed(\"arrdate\", \"arrival_date\").withColumnRenamed(\"depdate\", \"departure_date\").withColumnRenamed(\"i94bir\", \"age\").withColumnRenamed(\"occup\", \"occupation\").withColumnRenamed(\"matflag\", \"matched_flag\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Order the columns in proper sequence"
    ]
   },
   {
@@ -686,15 +706,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# test.select(\"visa_status\").distinct().show()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -703,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,51 +729,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "date_format = \"%Y-%m-%d\"\n",
-    "date_cols = [\"arrdate\", \"depdate\"]\n",
-    "convert_sas_udf = udf(lambda x: x if x is None else (timedelta(days=x) + datetime(1960, 1, 1)).strftime(date_format))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+------------+--------------+\n",
-      "|arrival_date|departure_date|\n",
-      "+------------+--------------+\n",
-      "|  2016-04-07|    1960-01-01|\n",
-      "|  2016-04-10|    1960-01-01|\n",
-      "|  2016-04-30|    1960-01-01|\n",
-      "|  2016-04-15|    2016-04-16|\n",
-      "|  2016-04-21|    2016-04-25|\n",
-      "+------------+--------------+\n",
-      "only showing top 5 rows\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    }
-   ],
-   "source": [
-    "immigration_df = immigration_df.withColumn(\"arrival_date\", udf_datetime_from_sas(immigration_df.arrival_date)).withColumn(\"departure_date\", udf_datetime_from_sas(immigration_df.departure_date))\n",
-    "immigration_df.select([\"arrival_date\", \"departure_date\"]).show(5)"
+    "immigration_df = immigration_df.withColumn(\n",
+    "    \"arrival_date\", udf_datetime_from_sas(immigration_df.arrival_date)\n",
+    ").withColumn(\"departure_date\", udf_datetime_from_sas(immigration_df.departure_date))\n"
    ]
   },
   {
@@ -774,17 +747,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = \"./data/us-cities-demographics.csv\"\n",
+    "filepath = \"./data/us_cities_demographics.csv\"\n",
     "demographic_df = spark.read.csv(filepath,inferSchema=True, header=True, sep=';')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -904,9 +877,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -919,6 +897,11 @@
       "only showing top 1 row\n",
       "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
     }
    ],
    "source": [
@@ -936,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1041,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1107,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1143,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1169,7 +1152,7 @@
    ],
    "source": [
     "# reading csv file\n",
-    "airport_csv_path = \"./data/airport-codes_csv.csv\"\n",
+    "airport_csv_path = \"./data/airport_codes.csv\"\n",
     "airport_df = spark.read.csv(airport_csv_path, header=True, sep=',', ignoreTrailingWhiteSpace=False)\n",
     "\n",
     "airport_df.printSchema()"
@@ -1184,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1224,7 +1207,7 @@
        "22757"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1243,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1260,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1276,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1308,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1358,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1388,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1404,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1430,7 +1413,101 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Testing"
+    "#### Remove space from columns values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remove_whitespace_udf = udf(lambda x: str(x).strip())\n",
+    "airport_df = (\n",
+    "    airport_df.withColumn(\n",
+    "        \"name\",\n",
+    "        remove_whitespace_udf(airport_df.name)\n",
+    "        if airport_df.name.isNotNull\n",
+    "        else airport_df.name,\n",
+    "    )\n",
+    "    .withColumn(\n",
+    "        \"city\",\n",
+    "        remove_whitespace_udf(airport_df.city)\n",
+    "        if airport_df.city.isNotNull\n",
+    "        else airport_df.city,\n",
+    "    )\n",
+    "    .withColumn(\n",
+    "        \"state\",\n",
+    "        remove_whitespace_udf(airport_df.state)\n",
+    "        if airport_df.state.isNotNull\n",
+    "        else airport_df.state,\n",
+    "    )\n",
+    "    .withColumn(\n",
+    "        \"type\",\n",
+    "        remove_whitespace_udf(airport_df.type)\n",
+    "        if airport_df.type.isNotNull\n",
+    "        else airport_df.type,\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exclude unused airport"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "used_airports = [\n",
+    "    \"seaplane_base\",\n",
+    "    \"medium_airport\",\n",
+    "    \"small_airport\",\n",
+    "    \"large_airport\",\n",
+    "]\n",
+    "airport_df = airport_df.filter(airport_df.type.isin(used_airports))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+--------------------+------------+-----+-------------+\n",
+      "|airport_id|                name|        city|state|         type|\n",
+      "+----------+--------------------+------------+-----+-------------+\n",
+      "|         0|        Lowell Field|Anchor Point| None|small_airport|\n",
+      "|         2|Pan Lake Strip Ai...|      Willow| None|small_airport|\n",
+      "|         3|     Meadow STOLport|     Jericho| None|small_airport|\n",
+      "|         5|The 2A Ranch Airport|Ormond Beach| None|small_airport|\n",
+      "|         7|    Pankratz Airport| Springfield| None|small_airport|\n",
+      "+----------+--------------------+------------+-----+-------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    }
+   ],
+   "source": [
+    "airport_df.show(5)"
    ]
   },
   {
@@ -1460,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {
     "editable": true
    },
@@ -1486,20 +1563,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "metadata": {
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "21/12/07 06:52:45 WARN HeartbeatReceiver: Removing executor driver with no recent heartbeats: 949393 ms exceeds timeout 120000 ms\n",
-      "21/12/07 06:52:46 WARN SparkContext: Killing executors is not supported by current scheduler.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Perform quality checks here"
    ]
