feat: Update notebook

--- a/smart_advertisement_capstone.ipynb
+++ b/smart_advertisement_capstone.ipynb
@@ -52,10 +52,9 @@
     "\n",
     "#### The data\n",
     "\n",
-    "The project uses data three data sources\n",
-    "- I94 immigration data that comes from the US National Tourism and Trade Office.\n",
-    "- U.S City demographic data that comes from Opensoft.\n",
-    "- Airports data from Kaggle\n"
+    "- I94 immigration data that comes from the US National Tourism and Trade Office, [source](https://www.trade.gov/national-travel-and-tourism-office).\n",
+    "- U.S City demographic data that comes from Opensoft, [source](https://www.kaggle.com/berkeleyearth/climate-change-earth-surface-temperature-data).\n",
+    "- Airports data from Datahub, [source](https://datahub.io/core/airport-codes#data)\n"
    ]
   },
   {
@@ -1503,7 +1502,10 @@
     {
      "name": "stderr",
      "output_type": "stream",
-     "text": []
+     "text": [
+      "21/12/08 02:22:01 WARN HeartbeatReceiver: Removing executor driver with no recent heartbeats: 1177655 ms exceeds timeout 120000 ms\n",
+      "21/12/08 02:22:01 WARN SparkContext: Killing executors is not supported by current scheduler.\n"
+     ]
     }
    ],
    "source": [
@@ -1518,10 +1520,34 @@
    "source": [
     "### Step 3: Define the Data Model\n",
     "#### 3.1 Conceptual Data Model\n",
-    "Map out the conceptual data model and explain why you chose that model\n",
+    "The conceptual model has been designed keeping into the mind that the model will be used for finding effective advertisement strategies targeted for immigrants. Therefore, I have considered the immigration as a fact table, which consists of details regarding the immigrant. Further, the demographics and airports as dimension tables, since these tables will allow us to estimate the details about the movement of immigrants.\n",
+    "\n",
+    "Only looking at the conceptual model we could say that from this model we could easily extract information such as:\n",
+    "\n",
+    "- Average age of immigrant of certain visa type\n",
+    "- Total number of Asian living in particular city\n",
+    "- Peak month of travel\n",
+    "\n",
+    "The list could go on, and each insights could be effectively used for making advertisement decision.\n",
+    "\n",
+    "<img src=\"./images/er_diagram.png\" width=\"500\">\n",
     "\n",
     "#### 3.2 Mapping Out Data Pipelines\n",
-    "List the steps necessary to pipeline the data into the chosen data model"
+    "\n",
+    "All of the collected data were stored in the s3 data lake without transforming. In order to transform the data into the conceptual model following steps were taken\n",
+    "\n",
+    "- Using Amazon EMR the data stored in s3 were transformed as shown in conceptual model\n",
+    "- The transformed data are than stored in s3\n",
+    "- The transformed data stored in s3 is than loaded to the redshift\n",
+    "- The loading of data has been monitored using Apache airflow\n",
+    "\n",
+    "    - Tree\n",
+    "\n",
+    "    <img src=\"./images/tree.png\" width=\"500\">\n",
+    "\n",
+    "    - Graph\n",
+    "\n",
+    "    <img src=\"./images/graph.png\" width=\"500\">"
    ]
   },
   {
@@ -1542,9 +1568,7 @@
     "editable": true
    },
    "outputs": [],
-   "source": [
-    "# Write code here"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1568,9 +1592,7 @@
     "editable": true
    },
    "outputs": [],
-   "source": [
-    "# Perform quality checks here"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1579,7 +1601,51 @@
    },
    "source": [
     "#### 4.3 Data dictionary \n",
-    "Create a data dictionary for your data model. For each field, provide a brief description of what the data is and where it came from. You can include the data dictionary in the notebook or in a separate file."
+    "\n",
+    "#### immigration (fact_table)\n",
+    "\n",
+    "|   column_name  |                              description                              | old_column_name |\n",
+    "|:--------------:|:---------------------------------------------------------------------:|:---------------:|\n",
+    "|      cicid     |               Unique identifier  of the immigrant record              |      cicid      |\n",
+    "|   origin_city  |                      City of origin of immigrant                      |      i94cit     |\n",
+    "|  traveled_from |                 City from where the immigrant traveled                |      i94res     |\n",
+    "|  arrived_city  |          City where immigrant arrived, extracted from i94port         |        -        |\n",
+    "|   us_address   |                       Address of immigrant in US                      |     i94addr     |\n",
+    "|  arrival_date  |                      Date of arrival of immigrant                     |     arrdate     |\n",
+    "| departure_date |              Date on which the immigrant departed form US             |     depdate     |\n",
+    "|       age      |                          Age of the immigrant                         |       age       |\n",
+    "|     gender     |                        Gender of the immigrant                        |      gender     |\n",
+    "|   visa_status  |                      Visa status of the immigrant                     |     i94visa     |\n",
+    "|    visa_type   |                         Visa type of immigrant                        |     visatype    |\n",
+    "|   occupation   |                     Occupation of immigrant in US                     |      occup      |\n",
+    "|     airline    |              Airline through which the immigrant traveled             |     airline     |\n",
+    "|  matched_flag  | Flag that denotes the user has arrived and departed(or visa expired) |     mat_flag    |\n",
+    "\n",
+    "\n",
+    "#### demographics (dim_table)\n",
+    "\n",
+    "| column_name                   | description                                                     |\n",
+    "|-------------------------------|-----------------------------------------------------------------|\n",
+    "| city_id                       | Unique id of for the city                                       |\n",
+    "| city                          | Name of city                                                    |\n",
+    "| state                         | State of city                                                   |\n",
+    "| american_indian_alaska_native | Total population of American Indian or Alaska Native in the city |\n",
+    "| asian                         | Total population of Asian in the city                           |\n",
+    "| hispanic_latino               | Total population of Hispanic or Latino                          |\n",
+    "| white                         | Total population of White                                       |\n",
+    "| female_population             | Total number of females                                         |\n",
+    "| male_population               | Total number of males                                           |\n",
+    "| total_population              | Total population of the city                                    |\n",
+    "\n",
+    "#### airports (dim_table)\n",
+    "\n",
+    "| column_name | description                                                 |\n",
+    "|-------------|-------------------------------------------------------------|\n",
+    "| airport_id  | Unique identifier of an airport                             |\n",
+    "| name        | Name of the airport                                         |\n",
+    "| city        | City at which the airport is located, extracted from region |\n",
+    "| state       | State at which the airport is located                       |\n",
+    "| type        | Type of the airport                                         |\n"
    ]
   },
   {
@@ -1596,51 +1662,6 @@
     " * The data populates a dashboard that must be updated on a daily basis by 7am every day.\n",
     " * The database needed to be accessed by 100+ people."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
