doc: Update notebook

--- a/smart_advertisement_capstone.ipynb
+++ b/smart_advertisement_capstone.ipynb
@@ -1568,7 +1568,9 @@
     "editable": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# In the src code"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1576,13 +1578,7 @@
     "editable": true
    },
    "source": [
-    "#### 4.2 Data Quality Checks\n",
-    "Explain the data quality checks you'll perform to ensure the pipeline ran as expected. These could include:\n",
-    " * Integrity constraints on the relational database (e.g., unique key, data type, etc.)\n",
-    " * Unit tests for the scripts to ensure they are doing the right thing\n",
-    " * Source/Count checks to ensure completeness\n",
-    " \n",
-    "Run Quality Checks"
+    "#### 4.2 Data Quality Checks"
    ]
   },
   {
@@ -1592,7 +1588,9 @@
     "editable": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Data quality checks has been performed in the airflow operator"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1664,13 +1662,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Clearly state the rationale for the choice of tools and technologies for the project.\n",
+    "\n",
+    "During the development of the proposed smart advertisement system several tools and technologies were used as mentioned [above](##technology-used). I have selected each tools very carefully with consideration of project goal and time. For cloud I have selected amazon because of the following services:\n",
+    "\n",
+    "- Amazon s3: It is low cost, highly available, secure, infinitely scalable and easy to manage object storage service. This is perfect because effectiveness of the smart advertisement service will increases with the amount of data thus the service should increase the size of the datasets as much as possible.\n",
+    "\n",
+    "- Amazon EMR: This service enables us to easily transform our data using apache spark which is lightning fast analytics engine for big data.\n",
+    "\n",
+    "- Amazon Redshift: This service is a fast, easy, and secure cloud data warehousing service that provides high scalability. Since it is fast it is the best choice for developing api endpoints for dashboard and automatic advertisement in near future. \n",
+    "\n",
+    "- Managed Apache Airflow: This service allows running of airflow without maintaining servers. The airflow is extremely important tool for monitoring etl tasks. It provides a visual representation of etl process, which is highly valuable for debugging and making discussion easier with data scientist and data analyst.\n",
+    "\n",
+    "Furthermore, I have used notion for project management and github for the version control. These two tool are must used tools for effective delivery of a product. Also, I have used python as a programming language because I love writing codes in python.\n",
+    "\n",
+    "#### Propose how often the data should be updated and why ?\n",
+    "\n",
+    "The data should be updated once a month because it would be difficult get data from US National Tourism and Trade Office often since the data has to be requested. Also, in the real product we will be using huge amount, performing analysis on one month old data might have nearly same effectiveness.\n",
+    "\n",
+    "#### How to approach the problem if the data was increased by 100x.\n",
+    "\n",
+    "- Transforming data: Currently in EMR only one master and slave node are running, since the EMR is highly scalable, I would have used appropriate number of slaves. I would also have partitioned the immigration data by month while writing in parquet format.\n",
+    "\n",
+    "- Loading data to redshift: I would have increase the size of the warehouse and while copying the data from s3 to redshift I would have used template filed that would allow to load timestamped files from S3 based on the execution time and run backfills.\n",
+    "\n",
+    "#### The data populates a dashboard that must be updated on a daily basis by 7am every day.\n",
+    "\n",
+    "- Use airflow to schedule and run pipelines\n",
+    "\n",
+    "#### The database needed to be accessed by 100+ people.\n",
+    "\n",
+    "- I would have used developed endpoints using sql client, lambda function and api gateway.\n"
+   ]
   }
  ],
  "metadata": {
